Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignObjectObject.quorum
class Main
    action Main
        Object v
        v = cast(Object, true)
        Test(v)
    end

    action Test(Object var)
        Boolean value = cast(Boolean, var)
        if value:GetValue() = true
            output "passed"
        end
    end
end
