Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBoolObj.quorum
class Main
    action Main
        integer i
        Boolean b
        b:SetValue(true)
        i = cast(integer, b)
    end
end